# scopeshare

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs  scopeshare.rs  syncshare.rs
tests/: basic.rs
